Remove explicit UseParNewGC JVM flag
 - The parallel new collector is enabled automatically if the CMS
 collector is enabled
 - `UseParNewGC` was deprecated in JDK8, produces a warning in JDK9 and
 has been removed in JDK10